<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pack It Up</string>
    <string name="addBoxMenu">New Box</string>
    <string name="boxName">Name</string>
    <string name="boxDescription">Description</string>
    <string name="boxNameHint">Tap to enter box name</string>
    <string name="boxDescHint">Tap to enter box description</string>
    <string name="confirmBoxDet">Create Box</string>
    <string name="boxListMenuDelete">Delete box</string>
    <string name="boxListMenuEdit">Edit box info</string>
    <string name="addItemMenu">Add Item</string>
    <string name="boxListMenuCreateTag">Create Tag</string>
    <string name="readBoxTag">Get Box From Tag</string>
    <string name="newItemAndNewButtonText">Create and New</string>
    <string name="newItemButtonText">Create and Finish</string>
    <string name="newItemFinishedButtonText">Finish</string>
    <string name="search">Search</string>
    <string name="searchBoxHint">tap to search</string>
    <string name="itemListMenuDelete">Delete Item</string>
    <string name="refresh">Refresh</string>
    <string name="helpText">Pack it up™ is an organizing application that helps organize boxes. The application can be used to make moving or box storing easy. Pack it up™ was created as a school assignment using NFC technology. The application can be used to create a searchable index over boxes, the items in the boxes and the current locations. The application also allows the user to create NFC tags to attach to the boxes, thus when the box tag is scanned the application reveals the box pre-registered content without even opening it. This feature requires a NFC enabled phone. Questions or ideas for further development can be sent to:                                                   simon.nistad@gmail.com</string>
</resources>
