<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="80dp"
		    android:layout_height="80dp"
		    android:src="@drawable/stuff" />


		<TextView
		    android:id="@+id/actionName"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:padding="5dip"
		    android:text="Create New Items"
		    android:textSize="28dp" />
		
	</LinearLayout>
    
    
    
    
    <LinearLayout 
        android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
    
        <TextView 
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="5dip" 
			android:text="@string/boxName" />
    		
   		<EditText 
   		    android:id="@+id/newItemName" 
		  	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hint="Enter Item Name"
			android:padding="5dip" 
			android:background="@drawable/rounded_edittext"
			android:layout_weight="1"/>   
  	</LinearLayout>
  	
  	<TextView 
  	    android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/boxDescription" />

	<EditText
	    android:id="@+id/newItemDescription"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="5dip"
	    android:lines="1"
		android:inputType="textMultiLine"
	    android:gravity="top"
	    android:hint="Enter Item Description"
	    android:background="@drawable/rounded_edittext"
	    android:scrollbars="vertical" />
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:layout_weight="0"
	    android:orientation="horizontal" >
   		
    	<Button
    	    android:id="@+id/newItemConfirmButton"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginLeft="5dp"
    	    android:layout_marginRight="5dp"
    	    android:background="@drawable/menu_button"
    	    android:padding="5dip"
    	    android:text="@string/newItemButtonText"
    	    android:textColor="#ffffff" />
    	
 	    <Button
 	        android:id="@+id/addNewItemButton"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_marginRight="5dp"
 	        android:layout_weight="1"
 	        android:background="@drawable/menu_button"
 	        android:padding="5dip"
 	        android:text="@string/newItemAndNewButtonText"
 	        android:textColor="#ffffff" />
 	    
 	    <Button
 	        android:id="@+id/addNewItemFinishedButton"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_marginRight="5dp"
 	        android:layout_weight="1"
 	        android:background="@drawable/menu_button"
 	        android:padding="5dip"
 	        android:text="@string/newItemFinishedButtonText"
 	        android:textColor="#ffffff" />
	    		
    </LinearLayout>
    	
</LinearLayout>