<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">

    	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageView
		    android:id="@+id/typeImage"
		    android:layout_width="80dp"
		    android:layout_height="80dp"
		    android:src="@drawable/blue_box" />

		<TextView
		    android:id="@+id/actionName"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:padding="5dip"
		    android:text="Create New Box"
		    android:textSize="28dp" />
		
	</LinearLayout>

    
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">


		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/boxName"
			android:padding="5dip" />
		
		<EditText
		    android:id="@+id/name"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="5dp"
		    android:layout_weight="1"
		    android:background="@drawable/rounded_edittext"
		    android:hint="@string/boxNameHint"
		    android:padding="5dip"
		    android:singleLine="true" />
		
	</LinearLayout>

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"
	    android:text="@string/boxDescription" />
	
	<EditText
	    android:id="@+id/description"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:background="@drawable/rounded_edittext"
	    android:gravity="top"
	    android:hint="@string/boxDescHint"
	    android:inputType="textMultiLine"
	    android:lines="1"
	    android:padding="5dip"
	    android:scrollbars="vertical" />

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"
	    android:text="Location" />
	
	<LinearLayout 
	    android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<Spinner
		    android:id="@+id/spinner1"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginLeft="5dp"
		    android:layout_weight="1"
		    android:background="#000000" />
		
		<Button
		    android:id="@+id/createLocationEdit"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginRight="5dp"
		    android:layout_weight="5"
		    android:background="@drawable/menu_button"
		    android:padding="5dip"
		    android:paddingTop="30dip"
		    android:text="New"
		    android:onClick="createLocation"
		    android:textColor="#ffffff" />

		</LinearLayout>
	
	<Button
	    android:id="@+id/confirm"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginTop="5dp"
	    android:background="@drawable/menu_button"
	    android:padding="5dip"
	    android:paddingTop="30dip"
	    android:text="@string/confirmBoxDet"
	    android:textColor="#ffffff" />

</LinearLayout>